🐛 Fix Web App UI issues
- Fixed 'warnings not appearing' bug: Removed incorrect 'display: none' from .result-card in styles.css
- Replaced emoji placeholder with actual logo (assets/logo.svg)
- Fixed broken GitHub link in header
- Ensured logo sizing fits container

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -32,12 +32,15 @@
         <!-- Header -->
         <header class="app-header">
             <div class="brand">
-                <div class="logo-shield">🛡️</div>
+                <div class="logo-shield">
+                    <img src="assets/logo.svg" alt="QR-SHIELD" style="width: 24px; height: 24px;">
+                </div>
                 <div class="app-title">QR-SHIELD</div>
             </div>
 
             <div class="header-actions">
-                <a href="https://github.com/Raoof128/qrshield" target="_blank" class="btn-icon" aria-label="GitHub">
+                <a href="https://github.com/Raoof128/Raoof128.github.io" target="_blank" class="btn-icon"
+                    aria-label="GitHub">
                     <span class="material-icons-round">code</span>
                 </a>
                 <button id="themeToggle" class="btn-icon" aria-label="Toggle Theme">
