--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -157,6 +157,12 @@
                 <button class="btn-secondary" onclick="resetScanner()">
                     <span class="material-icons-round">refresh</span> Scan Another
                 </button>
+                <button class="btn-secondary" onclick="shareResult()">
+                    <span class="material-icons-round">share</span> Share
+                </button>
+                <button id="reportBtn" class="btn-danger" onclick="reportPhishing()" style="display: none;">
+                    <span class="material-icons-round">report</span> Report Phishing
+                </button>
             </div>
         </section>
 
@@ -209,6 +215,55 @@
             </div>
 
             <button id="closeModalBtn" class="btn-secondary" style="width: 100%">Cancel</button>
+        </div>
+    </div>
+
+    <!-- Onboarding Modal (First-time users) -->
+    <div id="onboardingModal" class="modal-overlay">
+        <div class="modal-content onboarding-modal">
+            <div class="onboarding-slide active" id="slide1">
+                <div class="onboarding-icon">🛡️</div>
+                <h2>Welcome to QR-SHIELD</h2>
+                <p>AI-powered phishing detection that runs <strong>100% offline</strong> in your browser.</p>
+                <div class="onboarding-features">
+                    <div class="feature-item">✅ No data leaves your device</div>
+                    <div class="feature-item">✅ Works without internet</div>
+                    <div class="feature-item">✅ Same engine as mobile apps</div>
+                </div>
+            </div>
+
+            <div class="onboarding-slide" id="slide2">
+                <div class="onboarding-icon">🔍</div>
+                <h2>How It Works</h2>
+                <p>Paste a URL or scan a QR code to check for phishing threats.</p>
+                <div class="onboarding-features">
+                    <div class="feature-item">📋 Paste any URL to analyze</div>
+                    <div class="feature-item">📷 Scan QR codes with camera</div>
+                    <div class="feature-item">🖼️ Upload QR code images</div>
+                </div>
+            </div>
+
+            <div class="onboarding-slide" id="slide3">
+                <div class="onboarding-icon">🧠</div>
+                <h2>25+ AI Heuristics</h2>
+                <p>Our engine detects brand impersonation, homograph attacks, suspicious TLDs, and more.</p>
+                <div class="onboarding-features">
+                    <div class="feature-item">🏢 500+ brand database</div>
+                    <div class="feature-item">🔗 Redirect chain analysis</div>
+                    <div class="feature-item">⚡ Results in under 50ms</div>
+                </div>
+            </div>
+
+            <div class="onboarding-dots">
+                <span class="dot active" onclick="goToSlide(1)"></span>
+                <span class="dot" onclick="goToSlide(2)"></span>
+                <span class="dot" onclick="goToSlide(3)"></span>
+            </div>
+
+            <div class="onboarding-actions">
+                <button id="skipOnboarding" class="btn-text">Skip</button>
+                <button id="nextOnboarding" class="btn-primary">Next →</button>
+            </div>
         </div>
     </div>
 
