feat: Implement web app demo mode and keyboard shortcuts, and refine README with architectural decisions, KMP rationale, and verifiable claims.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -137,6 +137,8 @@
                         <span class="sample-text">bit.ly shortener</span>
                     </button>
                 </div>
+                <p class="keyboard-hint">⌨️ Tip: Press <kbd>/</kbd> to focus, <kbd>Enter</kbd> to analyze,
+                    <kbd>Esc</kbd> to reset</p>
             </div>
         </main>
 
