--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -237,7 +237,7 @@
         </div>
     </div>
 
-    <!-- Onboarding Modal (First-time users) -->
+    <!-- Onboarding Modal (15-second intro with safe vs risky examples) -->
     <div id="onboardingModal" class="modal-overlay">
         <div class="modal-content onboarding-modal">
             <div class="onboarding-slide active" id="slide1">
@@ -252,24 +252,48 @@
             </div>
 
             <div class="onboarding-slide" id="slide2">
-                <div class="onboarding-icon">🔍</div>
-                <h2>How It Works</h2>
-                <p>Paste a URL or scan a QR code to check for phishing threats.</p>
-                <div class="onboarding-features">
-                    <div class="feature-item">📋 Paste any URL to analyze</div>
-                    <div class="feature-item">📷 Scan QR codes with camera</div>
-                    <div class="feature-item">🖼️ Upload QR code images</div>
+                <div class="onboarding-icon">⚔️</div>
+                <h2>Safe vs Risky QR Codes</h2>
+                <p>See the difference instantly:</p>
+                <div style="display: flex; gap: 16px; justify-content: center; margin-top: 16px;">
+                    <div style="background: rgba(0,200,83,0.15); padding: 12px; border-radius: 12px; text-align: center; flex: 1;">
+                        <div style="font-size: 24px; margin-bottom: 8px;">🟢</div>
+                        <code style="font-size: 11px;">google.com</code>
+                        <div style="font-size: 12px; color: var(--color-safe); font-weight: 600;">SAFE</div>
+                    </div>
+                    <div style="background: rgba(255,56,96,0.15); padding: 12px; border-radius: 12px; text-align: center; flex: 1;">
+                        <div style="font-size: 24px; margin-bottom: 8px;">🔴</div>
+                        <code style="font-size: 11px;">paypa1.tk</code>
+                        <div style="font-size: 12px; color: var(--color-danger); font-weight: 600;">PHISHING</div>
+                    </div>
                 </div>
+                <p style="font-size: 12px; margin-top: 12px; opacity: 0.7;">QR-SHIELD explains <em>why</em> URLs are risky!</p>
             </div>
 
             <div class="onboarding-slide" id="slide3">
                 <div class="onboarding-icon">🧠</div>
                 <h2>25+ AI Heuristics</h2>
-                <p>Our engine detects brand impersonation, homograph attacks, suspicious TLDs, and more.</p>
+                <p>We detect multiple attack types:</p>
                 <div class="onboarding-features">
-                    <div class="feature-item">🏢 500+ brand database</div>
-                    <div class="feature-item">🔗 Redirect chain analysis</div>
-                    <div class="feature-item">⚡ Results in under 50ms</div>
+                    <div class="feature-item">🔤 Typosquatting (paypa1 → paypal)</div>
+                    <div class="feature-item">🌐 Homograph attacks (Cyrillic chars)</div>
+                    <div class="feature-item">🔗 URL shortener obfuscation</div>
+                </div>
+            </div>
+
+            <div class="onboarding-slide" id="slide4">
+                <div class="onboarding-icon">🚀</div>
+                <h2>Try It Now!</h2>
+                <p>Click a sample below or paste any URL:</p>
+                <div style="display: flex; gap: 8px; justify-content: center; margin-top: 16px; flex-wrap: wrap;">
+                    <button onclick="hideOnboarding(); tryUrl('https://google.com')" 
+                            style="padding: 8px 16px; border-radius: 20px; background: var(--color-safe); color: white; border: none; cursor: pointer; font-weight: 600;">
+                        ✓ Try Safe URL
+                    </button>
+                    <button onclick="hideOnboarding(); tryUrl('https://paypa1-secure.tk/login')" 
+                            style="padding: 8px 16px; border-radius: 20px; background: var(--color-danger); color: white; border: none; cursor: pointer; font-weight: 600;">
+                        ⚠ Try Phishing URL
+                    </button>
                 </div>
             </div>
 
@@ -277,6 +301,7 @@
                 <span class="dot active" onclick="goToSlide(1)"></span>
                 <span class="dot" onclick="goToSlide(2)"></span>
                 <span class="dot" onclick="goToSlide(3)"></span>
+                <span class="dot" onclick="goToSlide(4)"></span>
             </div>
 
             <div class="onboarding-actions">
