feat: Implement a new QR code scanner dashboard with dedicated HTML, CSS, and JavaScript files.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -270,6 +270,12 @@
                     Built for <strong>KotlinConf Student Competition 2025-2026</strong>
                 </p>
                 <div class="footer-links">
+                    <a href="scanner.html" class="dashboard-link">
+                        <span class="material-icons-round">qr_code_scanner</span> Scanner Dashboard
+                    </a>
+                    <a href="results.html" class="dashboard-link">
+                        <span class="material-icons-round">dashboard</span> Results Dashboard
+                    </a>
                     <a href="https://github.com/Raoof128/Raoof128.github.io" target="_blank">
                         <span class="material-icons-round">code</span> GitHub
                     </a>
