feat: implement new onboarding and export pages with dedicated UI and logic.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -276,6 +276,12 @@
                     <a href="results.html" class="dashboard-link">
                         <span class="material-icons-round">dashboard</span> Results Dashboard
                     </a>
+                    <a href="export.html" class="dashboard-link">
+                        <span class="material-icons-round">file_upload</span> Export Reports
+                    </a>
+                    <a href="onboarding.html" class="dashboard-link">
+                        <span class="material-icons-round">settings</span> Privacy Settings
+                    </a>
                     <a href="https://github.com/Raoof128/Raoof128.github.io" target="_blank">
                         <span class="material-icons-round">code</span> GitHub
                     </a>
