--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -65,7 +65,7 @@
                 </a>
 
                 <div class="nav-section-label">System</div>
-                <a class="nav-link" href="#settings" id="nav-settings">
+                <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
                 </a>
