--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -69,7 +69,7 @@
                         <span class="material-symbols-outlined">verified_user</span>
                         <span class="nav-text">Whitelist</span>
                     </a>
-                    <a class="nav-link" href="#settings" id="nav-settings">
+                    <a class="nav-link" href="onboarding.html" id="nav-settings">
                         <span class="material-symbols-outlined">settings</span>
                         <span class="nav-text">Settings</span>
                     </a>
